[package]
name = "epilyon_server"
version = "0.1.0"
authors = ["Adrien Navratil <adrien1975@live.fr>"]
edition = "2018"

[dependencies]
actix-web = "2.0.0"
actix-rt = "1.0.0"
log = "0.4.8"
pretty_env_logger = "0.3.1"
serde = "1.0.104"
serde_derive = "1.0.104"
serde_json = "1.0.44"
toml = "0.5.5"
reqwest = { version = "0.10.1", features = ["json"] }
lopdf = "0.23.0"
chrono = { version = "0.4.10", features = ["serde"] }
time = "0.1.42"
lazy_static = "1.4.0"
uuid = { version = "0.8.1", features = ["v4"] }
failure = "0.1.6"
futures = "0.3.1"
base64 = "0.11.0"
actix = "0.9.0"